force-app/main/default/objects/GFH_Cohort__c/GFH_Cohort__c.object-meta.xml
<CustomObject>
    <label>Cohort</label>
    <pluralLabel>Cohorts</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>