force-app/main/default/objects/GFH_Cohort__c/fields/LearningMetric_02__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_02__c</fullName>
    <label>Learning Metric 02</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>