force-app/main/default/objects/GFH_Cohort__c/fields/LearningMetric_19__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_19__c</fullName>
    <label>LearningMetric 19</label>
    <type>Text</type>
    <length>255</length>
</CustomField>