force-app/main/default/objects/GFH_Cohort__c/fields/LearningMetric_32__c.field-meta.xml
<CustomField>
    <fullName>LearningMetric_32__c</fullName>
    <label>Learning Metric 32</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>